--- a/stureports/think-java/ReidLuhn.think-java_results.html
+++ b/stureports/think-java/ReidLuhn.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-11
+Run date: 2018-10-12
 <br>Student User: ReidLuhn
 <br>Project: think-java
 <br>
@@ -66,8 +66,8 @@ Enter seconds: That is 0 hours, 0 minutes, and 13 seconds.
 -->
 I'm thinking of a number between 1 and 100, can you guess it?
 	Your guess is: 13
-	My number was: 97
-	You were off by: 84
+	My number was: 51
+	You were off by: 38
 <--
 	[OUTPUT OK]
 
@@ -205,5 +205,25 @@ Up and running!
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
 <b>          [SCORE] <font color="green">0.91</font></b>
+
+<hr>
+
+<b>[Assignment]  >Think Java: Ch6 - pt1< </b>
+  [DESC] HW3: Third HW Assignment, Swettercise. Assigned with Chapter6 work
+
+*[BEGIN chapter7]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
+[COMPILING] Exercise3.java
+	[ERROR] javac failed Exercise3.java Exercise3.java:2: error: invalid method declaration; return type required
+		public static main(String[] args){
+		              ^
+	1 error
+	
+[SUMMARY] 
+	['Exercise3: COMPILE ERROR (- 0.30)'
+	 'Exercise4: MISSING (- 0.50)']
+[DONE chapter7]
+[ASSIGNMENT DONE] Think Java: Ch6 - pt1
+<b>          [SCORE] 0.20</b>
 
 </pre></body></html>
