--- a/stureports/think-java/1amsmith1020.think-java_results.html
+++ b/stureports/think-java/1amsmith1020.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-11
+Run date: 2018-10-12
 <br>Student User: 1amsmith1020
 <br>Project: think-java
 <br>
@@ -70,7 +70,7 @@ Enter amount of seconds:
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-12
+13
 	
 <--
 	[OUTPUT OK]
@@ -156,5 +156,17 @@ Ch6Ex5.java:57: error: cannot find symbol
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
 <b>          [SCORE] 0.70</b>
+
+<hr>
+
+<b>[Assignment]  >Think Java: Ch6 - pt1< </b>
+  [DESC] HW3: Third HW Assignment, Swettercise. Assigned with Chapter6 work
+
+*[BEGIN chapter7]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
+	[ERROR] No chapter work for:chapter7
+[DONE chapter7]
+[ASSIGNMENT DONE] Think Java: Ch6 - pt1
+<b>          [SCORE] 0.25</b>
 
 </pre></body></html>
