--- a/stureports/think-java/DrKiefer.think-java_results.html
+++ b/stureports/think-java/DrKiefer.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-11
+Run date: 2018-10-12
 <br>Student User: DrKiefer
 <br>Project: think-java
 <br>
@@ -68,8 +68,8 @@ Enter number of seconds:
 Im thinking of a number between 1 and 100. Can you guess it?
 	What's your guess? 
 	Your guess is: 13
-	The number I was think of is 50
-	You were off by 37
+	The number I was think of is 75
+	You were off by 62
 	
 <--
 	[OUTPUT OK]
@@ -187,5 +187,17 @@ Doesnt Work
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
 <b>          [SCORE] 0.70</b>
+
+<hr>
+
+<b>[Assignment]  >Think Java: Ch6 - pt1< </b>
+  [DESC] HW3: Third HW Assignment, Swettercise. Assigned with Chapter6 work
+
+*[BEGIN chapter7]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
+	[ERROR] No chapter work for:chapter7
+[DONE chapter7]
+[ASSIGNMENT DONE] Think Java: Ch6 - pt1
+<b>          [SCORE] 0.25</b>
 
 </pre></body></html>
