--- a/stureports/think-java/aliyaaware.think-java_results.html
+++ b/stureports/think-java/aliyaaware.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-11
+Run date: 2018-10-12
 <br>Student User: aliyaaware
 <br>Project: think-java
 <br>
@@ -64,8 +64,8 @@ How many seconds do you want to convert? 13 seconds = 0 hours, 0 minutes, 13 sec
 -->
 Im thinking of a number between 1-100, can you guess it?
 	Type a number : Your Guess is 13
-	THe number I was thinkin of is: 33
-	You were off by: 20
+	THe number I was thinkin of is: 36
+	You were off by: 23
 	
 <--
 	[OUTPUT OK]
@@ -232,5 +232,33 @@ Im thinking of a number between 1-100, can you guess it?
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
 <b>          [SCORE] 0.64</b>
+
+<hr>
+
+<b>[Assignment]  >Think Java: Ch6 - pt1< </b>
+  [DESC] HW3: Third HW Assignment, Swettercise. Assigned with Chapter6 work
+
+*[BEGIN chapter7]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
+[COMPILING] Exercise3.java
+	[SUCCESSFUL COMPILE] Exercise3.java
+[TESTING WITH] TestCh7Ex3
+[COMPILING] TestCh7Ex3.java
+	[ERROR] javac failed TestCh7Ex3.java
+ ----begin compile output------- 
+TestCh7Ex3.java:40: error: cannot find symbol
+	            int gotBack = Exercise3.indexOfMax(someInts);
+	                          ^
+	  symbol:   variable Exercise3
+	  location: class TestCh7Ex3
+	1 error
+	
+-----------END COMPILE-------
+[SUMMARY] 
+	['Exercise3: COMPILE ERROR (- 0.30)'
+	 'Exercise4: MISSING (- 0.50)']
+[DONE chapter7]
+[ASSIGNMENT DONE] Think Java: Ch6 - pt1
+<b>          [SCORE] 0.20</b>
 
 </pre></body></html>
