--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -73,8 +73,8 @@ How many seconds? 13.00 sec = 0 hour, 0 min
 I'm thinking of a number between 1 and 100(Including Both)
 	Can you guess what it is? 
 	Type a number: You guessed: 13
-	The number I was thinking of is: 67
-	You were off by: 54
+	The number I was thinking of is: 93
+	You were off by: 80
 	
 <--
 	[OUTPUT OK]
@@ -216,8 +216,8 @@ I'm thinking of a number between 1 and 100(Including Both)
 
 <hr>
 
-<b>[Assignment]  >Think Java: Ch6 - pt1< </b>
-  [DESC] HW3: Third HW Assignment, Swettercise. Assigned with Chapter6 work
+<b>[Assignment]  > Think Java: Ch7 - pt1 < </b>
+  [DESC] HW4: Fourth HW Assignment, Ch7 Ex3 & 4
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
@@ -261,7 +261,7 @@ TestCh7Ex4.java:47: error: incompatible types: boolean cannot be converted to bo
 	['Exercise3: PASSED - EXCELLENT!'
 	 'Exercise4: COMPILE ERROR (- 0.30)']
 [DONE chapter7]
-[ASSIGNMENT DONE] Think Java: Ch6 - pt1
+[ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
 <b>          [SCORE] 0.70</b>
 
 </pre></body></html>
