--- a/stureports/think-java/aliyaaware.think-java_results.html
+++ b/stureports/think-java/aliyaaware.think-java_results.html
@@ -64,8 +64,8 @@ How many seconds do you want to convert? 13 seconds = 0 hours, 0 minutes, 13 sec
 -->
 Im thinking of a number between 1-100, can you guess it?
 	Type a number : Your Guess is 13
-	THe number I was thinkin of is: 54
-	You were off by: 41
+	THe number I was thinkin of is: 52
+	You were off by: 39
 	
 <--
 	[OUTPUT OK]
@@ -235,8 +235,8 @@ Im thinking of a number between 1-100, can you guess it?
 
 <hr>
 
-<b>[Assignment]  >Think Java: Ch6 - pt1< </b>
-  [DESC] HW3: Third HW Assignment, Swettercise. Assigned with Chapter6 work
+<b>[Assignment]  > Think Java: Ch7 - pt1 < </b>
+  [DESC] HW4: Fourth HW Assignment, Ch7 Ex3 & 4
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
@@ -258,7 +258,7 @@ TestCh7Ex3.java:40: error: cannot find symbol
 	['Exercise3: COMPILE ERROR (- 0.30)'
 	 'Exercise4: MISSING (- 0.50)']
 [DONE chapter7]
-[ASSIGNMENT DONE] Think Java: Ch6 - pt1
+[ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
 <b>          [SCORE] 0.20</b>
 
 </pre></body></html>
