--- a/stureports/think-java/Fwuff547.think-java_results.html
+++ b/stureports/think-java/Fwuff547.think-java_results.html
@@ -65,7 +65,7 @@ How many seconds?
 [RUNNING] Exercise4
 -->
 I have a number between 1 and 100, guess what it is?
-	You guessed 13, I was thinking of 85, you were 72 off.
+	You guessed 13, I was thinking of 97, you were 84 off.
 <--
 	[OUTPUT OK]
 
@@ -212,8 +212,8 @@ abcdef
 
 <hr>
 
-<b>[Assignment]  >Think Java: Ch6 - pt1< </b>
-  [DESC] HW3: Third HW Assignment, Swettercise. Assigned with Chapter6 work
+<b>[Assignment]  > Think Java: Ch7 - pt1 < </b>
+  [DESC] HW4: Fourth HW Assignment, Ch7 Ex3 & 4
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
@@ -268,7 +268,7 @@ abcdef
 	['Exercise3: PASSED - EXCELLENT!'
 	 'Exercise4: PASSED - EXCELLENT!']
 [DONE chapter7]
-[ASSIGNMENT DONE] Think Java: Ch6 - pt1
+[ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
 <b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
