--- a/stureports/think-java/NickPoletti1.think-java_results.html
+++ b/stureports/think-java/NickPoletti1.think-java_results.html
@@ -77,8 +77,8 @@ Exercise4!
 	Can you guess what it is
 	Guess a number: 
 	Your guess is 13
-	The number I was thinking of was 84
-	Your guess was off by: 71
+	The number I was thinking of was 14
+	Your guess was off by: 1
 	
 <--
 	[OUTPUT OK]
@@ -220,14 +220,14 @@ MultAdd Exercise
 
 <hr>
 
-<b>[Assignment]  >Think Java: Ch6 - pt1< </b>
-  [DESC] HW3: Third HW Assignment, Swettercise. Assigned with Chapter6 work
+<b>[Assignment]  > Think Java: Ch7 - pt1 < </b>
+  [DESC] HW4: Fourth HW Assignment, Ch7 Ex3 & 4
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
 	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
-[ASSIGNMENT DONE] Think Java: Ch6 - pt1
+[ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
 <b>          [SCORE] 0.25</b>
 
 </pre></body></html>
