--- a/stureports/think-java/heypoppins.think-java_results.html
+++ b/stureports/think-java/heypoppins.think-java_results.html
@@ -43,8 +43,8 @@ How many seconds?: 0 hours, 0 minutes, 13 seconds.
 [RUNNING] Exercise4
 -->
 What do you think my number is?: Your number was: 13
-	My number was: 43
-	You were off by: 30
+	My number was: 90
+	You were off by: 77
 	
 <--
 	[OUTPUT OK]
@@ -116,14 +116,14 @@ Ch6Ex4.java:56: error: cannot find symbol
 
 <hr>
 
-<b>[Assignment]  >Think Java: Ch6 - pt1< </b>
-  [DESC] HW3: Third HW Assignment, Swettercise. Assigned with Chapter6 work
+<b>[Assignment]  > Think Java: Ch7 - pt1 < </b>
+  [DESC] HW4: Fourth HW Assignment, Ch7 Ex3 & 4
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
 	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
-[ASSIGNMENT DONE] Think Java: Ch6 - pt1
+[ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
 <b>          [SCORE] 0.25</b>
 
 </pre></body></html>
