--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html><head><title>Project Status Page</title></head>
 <body>
+ APCS Soquel
 <table>
 <tr><td> <a href="stureports/think-java.html">Think-Java Summary Page</a></td></tr>
+  <tr><td> <a href="stureports/coat-of-arms.html">Coat of Arms</a></td></tr>
 </table>
 </body>
 <html>
